--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <section class="sec">
       <figure>
         <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group" class="center">
+        <a href="https://example.com">example.com</a>
         <figcaption>345 Carl Street Apt 12, Carrol Rd. Brooklyn, NY - Photo by Denise Richards.</figcaption>
       </figure>
 
